--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
   "engines": {
     "node": ">= 4"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "font-awesome": "^4.7.0"
+  }
 }
